# nekocode

./: AGENTS.md  CLAUDE.md  Cargo.toml
crates/nekocode/: Cargo.toml
crates/nekocode-core/: Cargo.toml
crates/nekocode-core/src/: extensions.rs  lib.rs  middleware.rs  provider.rs  types.rs
crates/nekocode-core/src/agent/: error.rs  mod.rs  new_agent.rs  sink.rs  store.rs  subagent.rs  test_mocks.rs  tool.rs
crates/nekocode-entities/: Cargo.toml
crates/nekocode-entities/src/: lib.rs  message.rs  middleware.rs  thread.rs  token.rs  turn.rs  workspace.rs
crates/nekocode-file/: Cargo.toml
crates/nekocode-file/src/: config.rs  lib.rs  tool.rs
crates/nekocode-mcp/: Cargo.toml
crates/nekocode-mcp/src/: client.rs  config.rs  lib.rs  tool.rs
crates/nekocode-provider/: Cargo.toml
crates/nekocode-provider/src/: deepseek.rs  lib.rs  sse.rs
crates/nekocode-provider/src/parser/: mod.rs
crates/nekocode-provider/src/parser/anthropic/: mod.rs  types.rs
crates/nekocode-provider/src/parser/openaiv1/: mod.rs  types.rs
crates/nekocode-shell/: Cargo.toml
crates/nekocode-shell/src/: config.rs  lib.rs  tool.rs
crates/nekocode-skills/: Cargo.toml
crates/nekocode-skills/src/: config.rs  lib.rs  loader.rs  skill.rs  skill_creator.md  skill_installer.md  skill_tool.rs
crates/nekocode-skills/src/builtin/skill-creator/: SKILL.md
crates/nekocode-skills/src/builtin/skill-installer/: SKILL.md
crates/nekocode-subagent/: Cargo.toml
crates/nekocode-subagent/src/: config.rs  factory.rs  lib.rs  middleware.rs  profile.rs  registry.rs  runner.rs  tool.rs
crates/nekocode-subagent/src/tool/: abort_subagent.rs  inspect_subagent.rs  mod.rs  read_subagent.rs  spawn_subagent.rs  wait_all_subagents.rs  wait_any_subagent.rs
crates/nekocode-subagent/tests/: integration.rs
crates/nekocode-subthread/: Cargo.toml
crates/nekocode-subthread/src/: activator.rs  config.rs  controller.rs  lib.rs  middleware.rs  path.rs  registry.rs  tool.rs
crates/nekocode-subthread/tests/: integration.rs
crates/nekocode-tool/: Cargo.toml
crates/nekocode-tool/src/: config.rs  lib.rs  tool.rs
crates/nekocode-types/: Cargo.toml
crates/nekocode-types/src/: config.rs  generate.rs  lib.rs  tool.rs
crates/nekocode/src/: lib.rs  main.rs
crates/nekocode/src/api/: error.rs  mod.rs
crates/nekocode/src/api/auth/: mod.rs
crates/nekocode/src/api/generate/: cancel.rs  mod.rs  stream_generate.rs  turn_io.rs  watch_stream.rs
crates/nekocode/src/api/middleware/: create.rs  delete.rs  list.rs  mod.rs  update.rs
crates/nekocode/src/api/middleware/shell/: list.rs  mod.rs
crates/nekocode/src/api/thread/: activate.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  subagent_factory.rs  subthread_activator.rs  subthread_controller.rs  update.rs
crates/nekocode/src/api/util/: mcp_probe.rs  mod.rs  models.rs  skills.rs
crates/nekocode/src/api/util/fs/: get_dirs.rs  list_dir.rs  mod.rs
crates/nekocode/src/api/workspace/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
crates/nekocode/src/runtime/: agent_builder.rs  agents.rs  deletion.rs  execution.rs  generation.rs  mod.rs  subagent_factory.rs  subthread_controller.rs  thread_creation.rs  turn_store.rs
crates/nekocode/tests/: api_auth.rs
docs/superpowers/plans/: 2026-06-19-nekocode-subthread.md  2026-06-30-subagent-redesign.md  2026-07-01-middlewareevent-branch.md  2026-07-02-agent-extensions-typemap.md
docs/superpowers/specs/: 2026-06-19-nekocode-subthread-design.md  2026-06-24-subagent-redesign.md  2026-06-30-subagent-redesign.md  2026-07-01-middlewareevent-branch-design.md
webui/: .eslintrc.cjs  .oxfmtrc.json  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
webui/src/: App.vue  main.ts  style.scss
webui/src/api/: auth.ts  client.ts  generate.ts  index.ts  middleware.ts  thread.ts  types.ts  util.ts  workspace.ts
webui/src/components/: AppHeader.vue
webui/src/interfaces/: components.d.ts
webui/src/modules/main/: View.vue
webui/src/modules/main/components/: FileConfigPanel.vue  InputArea.vue  MarkdownView.vue  McpEntryEditor.vue  MessageBox.vue  PickFolder.vue  ShellConfigPanel.vue  Sidebar.vue  SingletonMwBlock.vue  SkillsConfigPanel.vue  SubthreadConfigPanel.vue  ThreadPanel.vue  ThreadSettingsDialog.vue  ThreadTreeNode.vue  markdown.ts
webui/src/modules/settings/: View.vue
webui/src/modules/settings/sections/: AppearanceSection.vue
webui/src/router/: index.ts
webui/src/stores/: app.ts
