[package]
name = "nekocode-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
toasty.workspace = true
nekocode-types.workspace = true
nekocode-entities.workspace = true
jiff.workspace = true