[package]
name = "nekocode-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures-core.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
anyhow.workspace = true
nekocode-core.workspace = true