[package]
name = "nekocode-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
nekocode-core.workspace = true
async-trait.workspace = true
nekocode-types.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
boxcar.workspace = true
dashmap.workspace = true
tokio-util.workspace = true
tracing.workspace = true
sdd.workspace = true