[package]
name = "nekocode-skills"
version = "0.1.0"
edition = "2024"

[dependencies]
nekocode-core.workspace = true
nekocode-types.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_yaml = "0.9"
