[package]
name = "nekocode-subagent"
version = "0.1.0"
edition = "2024"

[dependencies]
nekocode-core.workspace = true
nekocode-types.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
dashmap.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
