[package]
name = "nekocode"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
toasty.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jiff.workspace = true
uuid.workspace = true
dashmap.workspace = true
axum.workspace = true
clap.workspace = true
boxcar.workspace = true
dirs.workspace = true
toml.workspace = true
tokio-util.workspace = true
scopeguard.workspace = true

nekocode-core.workspace = true
nekocode-entities.workspace = true
nekocode-types.workspace = true
nekocode-provider.workspace = true
nekocode-shell.workspace = true
nekocode-tool.workspace = true
nekocode-mcp.workspace = true
nekocode-skills.workspace = true